--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,11 @@
                     Real Estate Rating Choropleth
                 </div>
                 <div class="chart-stage">
-                    <svg id="usmap_svg" width="960" height="500"></svg>
+                    <svg id="usmap_svg"></svg>
                 </div>
             </div>
         </div>
-        <!-- (2) Region: region_div -->
+        <!-- (2) Region: region_svg -->
         <div class="col-sm-3">
             <div class="chart-wrapper">
                 <div class="chart-title">
@@ -46,16 +46,16 @@
                 </div>
             </div>
         </div>
-        <!-- (3) Rating: rating_div -->
+        <!-- (3) Rating: rating_svg -->
         <div class="col-sm-3">
             <div class="chart-wrapper">
                 <div class="chart-title">
                     Real Estate Ratings
                 </div>
                 <div class="chart-stage">
-                    <div id="rating_div">
+                    <svg id="rating_svg">
                         <!-- Region Rate -->
-                    </div>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -66,8 +66,7 @@
                     Real Estate Predictions
                 </div>
                 <div class="chart-stage">
-                    <div id="prediction_chart_div">
-                    </div>
+                    <svg id="prediction_chart_svg"></svg>
                 </div>
             </div>
         </div>
@@ -79,7 +78,7 @@
                 </div>
                 <div class="chart-stage">
                     <div id="poverty-level-row-chart">
-                        <svg id="top_stocks_svg" width="960" height="500"></svg>
+                        <svg id="top_stocks_svg"></svg>
                     </div>
                 </div>
             </div>
@@ -91,7 +90,7 @@
                     Local Stocks
                 </div>
                 <div class="chart-stage">
-                    <svg id="stock_history_svg" width="960" height="500"></svg>
+                    <svg id="stock_history_svg"></svg>
                 </div>
             </div>
         </div>
