--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                     Real Estate Predictions
                 </div>
                 <div class="chart-stage">
-                    <svg id="prediction_chart_svg"></svg>
+                    <div id="prediction_chart_div"></div>
                 </div>
             </div>
         </div>
@@ -107,6 +107,7 @@
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
         <script src="./static/lib/js/keen.min.js"></script>
+        <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
 
         <script src="./static/wjp/js/wjp.js"></script>
 
