--- a/templates/index.html
+++ b/templates/index.html
@@ -63,22 +63,22 @@
         <div class="col-sm-6">
             <div class="chart-wrapper">
                 <div class="chart-title">
-                    Real Estate Predictions
+                    History
                 </div>
                 <div class="chart-stage">
                     <div id="prediction_chart_div"></div>
                 </div>
             </div>
         </div>
-        <!-- (5) Stock List Bubble: top_stocks_svg -->
+        <!-- (5) Stock List Bubble: slider_svg -->
         <div class="col-sm-6">
             <div class="chart-wrapper">
                 <div class="chart-title">
-                    Local Stocks Full List
+                    Slider
                 </div>
                 <div class="chart-stage">
                     <div id="poverty-level-row-chart">
-                        <svg id="top_stocks_svg"></svg>
+                        <svg id="slider_svg"></svg>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,6 @@
         <div class="col-sm-6">
             <div class="chart-wrapper">
                 <div class="chart-title">
-                    Local Stocks
                 </div>
                 <div class="chart-stage">
                     <svg id="stock_history_svg"></svg>
