--- a/templates/index.html
+++ b/templates/index.html
@@ -70,26 +70,27 @@
                 </div>
             </div>
         </div>
-        <!-- (5) Stock List Bubble: slider_svg -->
+        <!-- (5) Stock List Bubble: radio_svg -->
         <div class="col-sm-6">
             <div class="chart-wrapper">
                 <div class="chart-title">
-                    Slider
+                    Choose metrics!
                 </div>
                 <div class="chart-stage">
                     <div id="poverty-level-row-chart">
-                        <svg id="slider_svg"></svg>
+                        <svg id="radio_svg"></svg>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- (6) Stock Line Chart: top_stocks_svg -->
+        <!-- (6) Stock Line Chart: date_svg -->
         <div class="col-sm-6">
             <div class="chart-wrapper">
                 <div class="chart-title">
+                    Heatmap Date
                 </div>
                 <div class="chart-stage">
-                    <svg id="stock_history_svg"></svg>
+                    <svg id="date_svg"></svg>
                 </div>
             </div>
         </div>
